fixing padding to adjust height on mobile devices

--- a/react-portfolio/src/components/Home/index.scss
+++ b/react-portfolio/src/components/Home/index.scss
@@ -74,7 +74,7 @@
   .home-page .text-zone {
     display: block;
     left: 0;
-    margin: auto 10%;
+    margin: 50px 30px;
 
     h1 {
       font-size: 33px;
