--- a/react-portfolio/src/components/Layout/index.scss
+++ b/react-portfolio/src/components/Layout/index.scss
@@ -8,7 +8,6 @@
   width: 100%;
   will-change: contents;
   height: 90%;
-  min-height: 566px;
   position: absolute;
   opacity: 0;
   top: 5%;
@@ -102,8 +101,9 @@
     .text-zone {
       display: block;
       left: 0;
-      margin: auto 10%;
+      margin: auto;
       width: auto;
+      padding: 30px;
 
       h1 {
         font-size: 33px;
