--- a/react-portfolio/src/components/Portfolio/index.scss
+++ b/react-portfolio/src/components/Portfolio/index.scss
@@ -181,7 +181,7 @@
       left: 0;
       width: auto;
       transform: none;
-      padding: 30px 50px;
+      padding: 30px;
 
       h1 {
         font-size: 33px;
